second working version

--- a/index.html
+++ b/index.html
@@ -14,6 +14,13 @@
       <input type="text" id="searchInput" placeholder="Search by tag">
       <button id="searchButton">Search</button>
     </div>
+    <!-- <div id="searchResultContainer">
+      <h3>Search Result</h3>
+      <img id="searchResultImage" alt="Search Result Image">
+    </div> -->
+    <div id="searchResultContainer" style="display: none;">
+      <img id="searchResultImage" alt="Search Result Image">
+    </div>
   </main>
   <script src="emoteShiba.js"></script>
 </body>
