--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
   <title>Shiba Emotion Matcher</title>
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
-<body>
+<!-- <body> -->
+<body style="background-image: url('cartoon-stars-on-a-purple-background-vector-3442168.jpg');">
   <header>
-    <h1>Shiba Emotion Matcher</h1>
+    <h1 id="title" class="fancy-title">Shiba Emotion Matcher</h1>
   </header>
   <main>
     <div id="imageContainer"></div>
