was attempting to add a next button, but reverted

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
   </header>
   <main>
     <div id="imageContainer"></div>
+    <!-- <div id="inputContainer">
+      <input type="text" id="emoteInput" placeholder="Enter an emotion tag">
+      <button id="nextImageButton">Next Image</button>
+    </div> -->
     <div id="searchContainer">
       <input type="text" id="searchInput" placeholder="Search by tag">
       <button id="searchButton">Search</button>
