add increment points system for printing message

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <div id="searchResultContainer" style="display: none;">
       <img id="searchResultImage" alt="Search Result Image">
     </div>
+    <div id="counter">You have 2 points! </div>
   </main>
   <script src="emoteShiba.js"></script>
 </body>
