add background pixel art

--- a/index.html
+++ b/index.html
@@ -26,8 +26,11 @@
     <div id="searchResultContainer" style="display: none;">
       <img id="searchResultImage" alt="Search Result Image">
     </div>
-    <div id="counter">You have 2 points! </div>
+    <div id="counter">You have 0 points! </div>
   </main>
+  <div id= "floatingIsland">
+    <img src="pixel_art_scene.jpg" alt="Floating Island">
+  </div>
   <script src="emoteShiba.js"></script>
 </body>
 </html>
