trying to get the images to show but not working

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <div id="counter">You have 0 points! </div>
   </main>
   <div id= "floatingIsland">
-    <img src="pixel_art_scene.jpg" alt="Floating Island">
+    <!-- <img src="pixel_art_scene.jpg" alt="Floating Island"> -->
   </div>
   <script src="emoteShiba.js"></script>
 </body>
