for some reason not displaying images

--- a/index.html
+++ b/index.html
@@ -31,6 +31,6 @@
   <div id= "floatingIsland">
     <!-- <img src="pixel_art_scene.jpg" alt="Floating Island"> -->
   </div>
-  <script src="emoteShiba.js"></script>
+  <script defer src="emoteShiba.js"></script>
 </body>
 </html>
