--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
         <!-- Add the 'tag' class to this div -->
         <div class="tag">Tag Text</div>
       </div>
+      <div class="like-button" style="display: none;">
+        <button id="likeButton">Like</button>
+      </div>
     </div>
     <div id="searchContainer">
       <input type="text" id="searchInput" placeholder="Search by tag">
